--- a/mazestyle.css
+++ b/mazestyle.css
@@ -44,3 +44,9 @@ canvas {
     display: block;
     border: 2px solid blue;
 }
+
+@media only screen and (max-width: 757px) {
+    #canvas {
+        width: 85%;
+    }
+}
