--- a/mazestyle.css
+++ b/mazestyle.css
@@ -2,46 +2,21 @@
 
 html, body  {
     font-family: Montserrat, sans-serif;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    bottom: 0;
-    margin: 0;
-    padding: 0;
-    position: absolute;
     background-color: #DB7093;
-}
-
-div#maze_container {
-    width: 500px;
-    height: 500px;
-    margin: 0 auto;
-    position: relative;
-    border: 2px #000000 solid;
-    margin-top: 5em;
-}
-
-table {
-    width: 100%;
-    height: 100%;
-    border-spacing: 0;
 }
 
 .info_text {
     color: whitesmoke;
     text-align: center;
-    padding : 0;
-    margin : 0;
-    line-height : 20px;
+    line-height: 20px;
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 3rem;
 }
 
 canvas {
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     display: block;
     border: 2px solid blue;
 }
